# WackyTheorem

./: .gitignore  Cargo.toml  DECISIONS.md  IMPLEMENTATION_PLAN.md  MANIFESTO.md  PROMPT_build.md  README.md  Roadmap.md  Spec.md  TOOS.md  VISION.md  agents.md  deleteme.md
.github/workflows/: ci.yml
crates/wkyt-broker/: Cargo.toml
crates/wkyt-broker/src/: lib.rs
crates/wkyt-connector-file/: Cargo.toml
crates/wkyt-connector-file/src/: lib.rs
crates/wkyt-connector-google/: Cargo.toml
crates/wkyt-connector-google/src/: auth.rs  calendar.rs  lib.rs
crates/wkyt-connector-google/tests/: integration_tests.rs
crates/wkyt-core/: Cargo.toml  build.rs
crates/wkyt-core/proto/: delta.proto
crates/wkyt-core/src/: agent.rs  capability.rs  connector.rs  delta.rs  error.rs  item.rs  lib.rs  proto.rs
crates/wkyt-core/tests/: idempotency.rs
crates/wkyt-host/: Cargo.toml
crates/wkyt-host/src/: lib.rs
crates/wkyt-host/tests/: e2e_pipeline.rs
crates/wkyt-vault/: Cargo.toml
crates/wkyt-vault/src/: hexfmt.rs  keys.rs  lib.rs  vault.rs
desktop/wkyt/: package-lock.json  package.json  vite.config.js
desktop/wkyt/src/: app.html
desktop/wkyt/src-tauri/: Cargo.toml  tauri.conf.json
desktop/wkyt/src-tauri/src/: google_auth.rs  lib.rs  lifegraph.rs  main.rs  storage.rs  vault_commands.rs
desktop/wkyt/src/routes/: +page.svelte
