[package]
name = "wkyt-broker"
description = "Bus trait and bounded in-process delta transport (D11)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
# DeltaBatch, the unit of transport.
wkyt-core = { workspace = true }
# Bounded mpsc channel — the entire in-process transport (D11).
tokio = { workspace = true, features = ["sync"] }
# async fn in the object-safe Bus traits.
async-trait = { workspace = true }
# BusError.
thiserror = { workspace = true }

[dev-dependencies]
# Runtime + macros + timeouts for channel-behavior tests.
tokio = { workspace = true, features = ["rt", "macros", "time"] }
