[package]
name = "wkyt-connector-file"
description = "Native file-importer connector: watches a directory of .json/.ics files (M4)"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# The Connector contract, Item/Delta types, SyncError taxonomy.
wkyt-core = { workspace = true }
# Cursor (de)serialization — the cursor is a JSON document inside the
# opaque SyncToken — and parsing .json file contents.
serde = { workspace = true }
serde_json = { workspace = true }
# File mtimes -> event timestamps.
chrono = { workspace = true }
# stream::iter to expose planned batches as the lazy DeltaStream.
futures-util = { workspace = true }
# Implementing the async Connector trait.
async-trait = { workspace = true }

[dev-dependencies]
# Isolated watch directories per test.
tempfile = "3"
# Runtime for draining sync streams in tests.
tokio = { workspace = true, features = ["rt", "macros"] }
