[package]
name = "wkyt-host"
description = "Connector orchestrator: scheduling, leases, backoff, error dispatch (lands in M4)"
version.workspace = true
edition.workspace = true
authors.workspace = true

# Intentionally empty until M4: stub crates carry no dependencies
# (Spec: every dependency must justify its existence).
[dependencies]
