[package]
name = "wkyt-vault"
description = "Encrypted SQLite vault: schema, atomic batch-apply, key service (lands in M2)"
version.workspace = true
edition.workspace = true
authors.workspace = true

# Intentionally empty until M2: stub crates carry no dependencies
# (Spec: every dependency must justify its existence).
[dependencies]
