[package]
name = "wkyt"
description = "An unconventional app done with a complete lack of seriousness"
version.workspace = true
edition.workspace = true
authors.workspace = true

# Build profiles live in the workspace root Cargo.toml.

[lib]
name = "wkyt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# IPC payloads and command results.
serde = { workspace = true }
serde_json = { workspace = true }

# Domain types and the Connector contract (single source of truth; the old
# local lifegraph definitions now re-export from here).
wkyt-core = { workspace = true }
# Event timestamps when constructing items (e.g. MockConnector).
chrono = { workspace = true }
# Implementing the async Connector trait (MockConnector).
async-trait = { workspace = true }
# StreamExt to drain connector delta streams in the setup task.
futures-util = { workspace = true }
# Interim storage engine; replaced by wkyt-vault (rusqlite/sqlcipher) in M2
# per D1/D10.
duckdb = { version = "1.10502", features = ["bundled"] }
