[package]
name = "wkyt"
description = "An unconventional app done with a complete lack of seriousness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

# Build profiles live in the workspace root Cargo.toml.

[lib]
name = "wkyt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# IPC payloads and command results.
serde = { workspace = true }
serde_json = { workspace = true }

# Domain types and the Connector contract (single source of truth; the old
# local lifegraph definitions now re-export from here).
wkyt-core = { workspace = true }
# Encrypted sqlcipher vault + KEK/DEK key service (D1/D10/D12). Replaces
# the interim DuckDB storage — and with it the bundled DuckDB C++ build
# that was breaking the Windows CI leg.
wkyt-vault = { workspace = true }
# Pipeline orchestrator: connector -> bus -> vault with ack-after-commit.
wkyt-host = { workspace = true }
# The M4 file-importer connector driven by the debug pipeline.
wkyt-connector-file = { workspace = true }
# Google Calendar connector: OAuth PKCE + Calendar API ingestion (D3-D6).
wkyt-connector-google = { workspace = true }
# Open the user's default browser for OAuth redirect.
open = "5"
# Polling interval for the debug import-folder watcher.
tokio = { workspace = true, features = ["time"] }
# Event timestamps when constructing items (e.g. MockConnector).
chrono = { workspace = true }
# Implementing the async Connector trait (MockConnector).
async-trait = { workspace = true }
# StreamExt to drain connector delta streams in the setup task.
futures-util = { workspace = true }
# libc for disabling core dumps (D12 memory hygiene).
libc = "0.2"

